# yugioh-deck-ai

./: .gitignore  clip_test.py  common.py  config.py  convert.py  detector.py  embedding_test.ipynb  predict.py  readme.md  test.ipynb  test.py  test_distillation.ipynb  test_distillation.py  train.py  train2.py  train_distillation.ipynb  train_distillation.py  upload_data.ipynb
ai/: common.py  config.py  scraping.ipynb  test.ipynb  train.ipynb  train.py
ai/custom/: augment.py  losses.py
custom/: __init__.py  layers.py  losses.py  metrics.py  models.py
data/augmentation/tf/: __init__.py  embedding.py  random_pixelate.py
data/dataset/tf/: __init__.py  embedding_dataset.py
datasets/: card_data.csv  card_id_list.pickle  test.csv  train.csv  valid.csv
db/: __init__.py  chroma_db.py  mysql.py
detector/: export.py  test.py  train.py
embedding/: convert.py  train.py  valid.py
inference/: detection.cpp  id_list.txt  main.cpp  run.sh
inference/include/: detection.hpp  utils.hpp
inference_cpp/: CMakeLists.txt  Readme.md  detection.cpp  inference.cpp  inference_speed_test.cpp  utils.cpp
inference_cpp/include/: detection.hpp  inference.hpp
loss/tf/: __init__.py  loss.py
loss/torch/: detection_loss.py  distillation_loss.py
models/tf/: embedding_model.py
models/torch/: detector.py
structures/: __init__.py  detection.py  embedding_matrix.py
utils/: __init__.py  augment.py  common.py  dataset.py  db.py  gradNorm.py  head.py  image_utils.py  layers.py  logger.py  losses.py  metrics.py  models.py  ops.py  scheduler.py  struct.py  tal.py
(+6 files in other folders)
